# flask-log-viewer

./: LICENSE  PLAN.md  README.md  app.py  pyproject.toml  test.py
.github/workflows/: python-publish.yml
app_logger/: logger.py
docs/main/: PLAN.md
flask_log_viewer/: viewer.py
flask_log_viewer/static/js/: ansi_html.js
flask_log_viewer/templates/: viewer.html
tmp/: foo.log.offset
