[tool.poetry]
name = "flask-log-viewer"
version = "0.1.0"
description = ""
authors = ["patrick o'leary <pjaol@pjaol.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.1"
gunicorn = "^21.2.0"
gevent = "^23.9.1"
pygtail = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
